css/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.img__hero {
    background-image:  linear-gradient(to bottom, rgba(0, 0, 0, 0.062), rgba(0, 0, 0, 0.692)),url(../assets/img/image.png);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 15px;
}

.bg__video {
    filter: brightness(0.7);
}

.cat__1 {
    background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.193)), url(../assets/img/salon.png);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 15px;
}

.cat__2 {
    background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.062), rgba(0, 0, 0, 0.4)), url(../assets/img/dormitorio.png);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 15px;
}

.cat__3 {
    background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.062), rgba(0, 0, 0, 0.4)), url(../assets/img/image.png);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 15px;
}

.cat__4 {
    background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.062), rgba(0, 0, 0, 0.4)), url(../assets/img/descarga.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 15px;
}

.cat__5 {
    background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.062), rgba(0, 0, 0, 0.4)), url(../assets/img/baño.png);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 15px;
}

/* Animaciones */

@keyframes fadeIn {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }

  @keyframes slideDown {
    from {
      transform: translateY(-50px);
      opacity: 0;
    }
    to {
      transform: translateY(0);
      opacity: 1;
    }
  }

  @keyframes slideUp {
    from {
      transform: translateY(50px);
      opacity: 0;
    }
    to {
      transform: translateY(0);
      opacity: 1;
    }
  }

  .animate-fade-in {
    animation: fadeIn 1s ease-out;
  }

  .animate-fade-in-delayed {
    animation: fadeIn 1s ease-out 0.3s forwards;
    opacity: 0;
  }

  .animate-fade-in-delayed-2 {
    animation: fadeIn 1s ease-out 0.6s forwards;
    opacity: 0;
  }

  .animate-slide-down {
    animation: slideDown 0.8s ease-out;
  }

  .animate-slide-up {
    animation: slideUp 0.8s ease-out;
  }

  .animate-slide-up-delayed {
    animation: slideUp 0.8s ease-out 0.9s forwards;
    opacity: 0;
  }

